--- a/dev/system/assets/locale/ja/common/model/user_account.txt
+++ b/dev/system/assets/locale/ja/common/model/user_account.txt
@@ -3,6 +3,6 @@
 ################################################################################
 
 model_user_account.error.user_account_name.not_empty = アカウント名を入力してください
-model_user_account.error.user_account_name.min_len = アカウント名は8文字以上で入力してください
-model_user_account.error.user_account_name.max_len = アカウント名は32文字以下で入力してください
+model_user_account.error.user_account_name.min_len = アカウント名は%min_len%文字以上で入力してください
+model_user_account.error.user_account_name.max_len = アカウント名は%max_len%文字以下で入力してください
 model_user_account.error.user_account_name.regex = アカウント名には半角英数字とアンダースコア(_)のみ使用できます
