--- a/dev/system/assets/locale/ja/common/model/user_auth.txt
+++ b/dev/system/assets/locale/ja/common/model/user_auth.txt
@@ -3,6 +3,6 @@
 ################################################################################
 
 model_user_auth.error.password.not_empty = パスワードを入力してください
-model_user_auth.error.password.min_len = パスワードは8文字以上で入力してください
-model_user_auth.error.password.max_len = パスワードは255文字以下で入力してください
+model_user_auth.error.password.min_len = パスワードは%min_len%文字以上で入力してください
+model_user_auth.error.password.max_len = パスワードは%max_len%文字以下で入力してください
 model_user_auth.error.password.regex = パスワードには半角英字、数字、記号をそれぞれ1種類以上含めてください
