--- a/dev/system/assets/locale/ja/auth_server/resend_verify_code.txt
+++ b/dev/system/assets/locale/ja/auth_server/resend_verify_code.txt
@@ -9,8 +9,8 @@ auth_server.resend_verify_code.form.email.label = メールアドレス
 auth_server.resend_verify_code.form.email.placeholder = meower@example.com
 auth_server.resend_verify_code.form.password.label = パスワード
 auth_server.resend_verify_code.form.button.send = 再送信
-auth_server.resend_verify_code.form.error.invalid_password = パスワードが間違っています
-auth_server.resend_verify_code.form.error.user_not_found = ユーザが見つかりません
+auth_server.resend_verify_code.form.error.invalid_password = パスワードが間違っています。
+auth_server.resend_verify_code.form.error.user_not_found = ユーザが見つかりません。
 
 auth_server.resend_verify_code.button.login = ログイン
 auth_server.resend_verify_code.button.signup = サインアップ
