--- a/dev/system/assets/locale/ja/common/model/temporary_user.txt
+++ b/dev/system/assets/locale/ja/common/model/temporary_user.txt
@@ -2,8 +2,8 @@
 # TemporaryUser
 ################################################################################
 
-model_temporary_user.error.code_not_found = 認証コードの取得に失敗しました
-model_temporary_user.error.email.already_exists = そのメールアドレスは既に登録されています
+model_temporary_user.error.code_not_found = 認証コードの取得に失敗しました。
+model_temporary_user.error.email.already_exists = そのメールアドレスは既に登録されています。
 
 # Verify mail
 model_temporary_user.verify_mail.subject = メールアドレスの確認
