--- a/dev/system/assets/locale/ja/common/model/temporary_user_code.txt
+++ b/dev/system/assets/locale/ja/common/model/temporary_user_code.txt
@@ -2,5 +2,5 @@
 # TemporaryUserCode
 ################################################################################
 
-model_temporary_user_code.error.code.expired = コードの有効期限が切れています
-model_temporary_user_code.error.code.not_match = コードが一致しません
+model_temporary_user_code.error.code.expired = コードの有効期限が切れています。
+model_temporary_user_code.error.code.not_match = コードが一致しません。
