feat: Implement pages related to reset password

--- a/dev/system/assets/locale/ja/auth_server/signup_success.txt
+++ b/dev/system/assets/locale/ja/auth_server/signup_success.txt
@@ -1,5 +1,5 @@
 ################################################################################
-# Signup page
+# Signup success page
 ################################################################################
 
 auth_server.signup_success.heading = サインアップ完了
