feat: Fix account creation flow

--- a/dev/system/assets/locale/ja/auth_server/forgot_password.txt
+++ b/dev/system/assets/locale/ja/auth_server/forgot_password.txt
@@ -2,7 +2,7 @@
 # Forgot password page
 ################################################################################
 
-auth_server.forgot_password.heading = ログイン
+auth_server.forgot_password.heading = パスワード再設定
 
 # Form
 auth_server.forgot_password.form.email.label = メールアドレス
