--- a/dev/system/assets/locale/ja/common/model/user_account.txt
+++ b/dev/system/assets/locale/ja/common/model/user_account.txt
@@ -7,3 +7,6 @@ model_user_account.error.user_account_name.min_len = アカウント名は%min_l
 model_user_account.error.user_account_name.max_len = アカウント名は%max_len%文字以下で入力してください。
 model_user_account.error.user_account_name.regex = アカウント名には半角英数字とアンダースコア(_)のみ使用できます。
 model_user_account.error.user_account_name.already_exists = そのアカウント名は既に使用されています。
+
+model_user_account.error.display_name.not_empty = 表示名を入力してください。
+model_user_account.error.display_name.max_len = 表示名は%max_len%文字以下で入力してください。
