--- a/dev/system/database/entity/locales/entities/reset_password_token/ja.yml
+++ b/dev/system/database/entity/locales/entities/reset_password_token/ja.yml
@@ -1,5 +1,14 @@
 entities:
   reset_password_token:
+    reset_password_token_id:
+      name: パスワードリセットトークンID
+    user_id:
+      name: ユーザID
     token:
+      name: トークン
       error:
         expired: 期限切れのトークンです
+    created_at:
+      name: 作成日時
+    expired_at:
+      name: 期限
