--- a/dev/system/database/entity/locales/entities/project_member_authority/ja.yml
+++ b/dev/system/database/entity/locales/entities/project_member_authority/ja.yml
@@ -1,8 +1,8 @@
 entities:
   project_member_authority:
     project_member_authority_id:
-      name: プロジェクトメンバー権限ID
+      name: "プロジェクトメンバー権限ID"
     symbol:
-      name: シンボル名
+      name: "シンボル名"
     value:
-      name: 値
+      name: "値"
