--- a/dev/system/database/entity/locales/entities/organization_member/ja.yml
+++ b/dev/system/database/entity/locales/entities/organization_member/ja.yml
@@ -1,10 +1,10 @@
 entities:
   organization_member:
     organization_member_id:
-      name: 組織メンバーID
+      name: "組織メンバーID"
     organization_id:
-      name: 組織ID
+      name: "組織ID"
     user_account_id::
-      name: アカウントID
+      name: "アカウントID"
     organization_member_authority_id:
-      name: 組織メンバー権限ID
+      name: "組織メンバー権限ID"
