--- a/dev/system/database/entity/locales/entities/organization_member_authority/ja.yml
+++ b/dev/system/database/entity/locales/entities/organization_member_authority/ja.yml
@@ -1,8 +1,8 @@
 entities:
   organization_member_authority:
     organization_member_authority_id:
-      name: 組織メンバー権限ID
+      name: "組織メンバー権限ID"
     symbol:
-      name: シンボル名
+      name: "シンボル名"
     value:
-      name: 値
+      name: "値"
