--- a/dev/system/database/entity/locales/entities/organization_workspace/ja.yml
+++ b/dev/system/database/entity/locales/entities/organization_workspace/ja.yml
@@ -1,8 +1,8 @@
 entities:
   organization_workspace:
     organization_workspace_id:
-      name: 組織ワークスペースID
+      name: "組織ワークスペースID"
     organization_id:
-      name: 組織ID
+      name: "組織ID"
     workspace_id:
-      name: ワークスペースID
+      name: "ワークスペースID"
