--- a/dev/system/database/entity/locales/entities/project/ja.yml
+++ b/dev/system/database/entity/locales/entities/project/ja.yml
@@ -1,16 +1,16 @@
 entities:
   project:
     project_id:
-      name: プロジェクトID
+      name: "プロジェクトID"
     project_name:
-      name: プロジェクト名
+      name: "プロジェクト名"
     display_name:
-      name: 表示名
+      name: "表示名"
     workspace_id:
-      name: ワークスペースID
+      name: "ワークスペースID"
     created_at:
-      name: 作成日時
+      name: "作成日時"
     updated_at:
-      name: 更新日時
+      name: "更新日時"
     is_deleted:
-      name: 削除フラグ
+      name: "削除フラグ"
