--- a/dev/system/database/entity/locales/entities/project_member/ja.yml
+++ b/dev/system/database/entity/locales/entities/project_member/ja.yml
@@ -1,10 +1,10 @@
 entities:
   project_member:
     project_member_id:
-      name: プロジェクトメンバーID
+      name: "プロジェクトメンバーID"
     project_id:
-      name: プロジェクトID
+      name: "プロジェクトID"
     user_account_id:
-      name: アカウントID
+      name: "アカウントID"
     project_member_authority_id:
-      name: プロジェクトメンバー権限ID
+      name: "プロジェクトメンバー権限ID"
