--- a/dev/system/database/entity/locales/entities/task/ja.yml
+++ b/dev/system/database/entity/locales/entities/task/ja.yml
@@ -1,18 +1,18 @@
 entities:
   task:
     task_id:
-      name: タスクID
+      name: "タスクID"
     project_id:
-      name: プロジェクトID
+      name: "プロジェクトID"
     owner_user_account_id:
-      name: タスクオーナーID
+      name: "タスクオーナーID"
     title:
-      name: 件名
+      name: "件名"
     content:
-      name: 内容
+      name: "内容"
     created_at:
-      name: 作成日時
+      name: "作成日時"
     updated_at:
-      name: 更新日時
+      name: "更新日時"
     is_deleted:
-      name: 削除フラグ
+      name: "削除フラグ"
