--- a/dev/system/database/entity/locales/entities/user/ja.yml
+++ b/dev/system/database/entity/locales/entities/user/ja.yml
@@ -1,14 +1,14 @@
 entities:
   user:
     user_id:
-      name: ユーザID
+      name: "ユーザID"
     email:
-      name: メールアドレス
+      name: "メールアドレス"
       error:
-        already_exists: そのメールアドレスは既に登録されています
+        already_exists: "そのメールアドレスは既に登録されています"
     created_at:
-      name: 登録日時
+      name: "登録日時"
     updated_at:
-      name: 更新日時
+      name: "更新日時"
     is_deleted:
-      name: 削除フラグ
+      name: "削除フラグ"
