--- a/dev/system/database/entity/locales/entities/user_account_workspace/ja.yml
+++ b/dev/system/database/entity/locales/entities/user_account_workspace/ja.yml
@@ -1,8 +1,8 @@
 entities:
   user_account_workspace:
     user_account_workspace_id:
-      name: アカウントワークスペースID
+      name: "アカウントワークスペースID"
     user_account_id:
-      name: アカウントID
+      name: "アカウントID"
     workspace_id:
-      name: ワークスペースID
+      name: "ワークスペースID"
