--- a/dev/system/database/entity/locales/entities/workspace_member/ja.yml
+++ b/dev/system/database/entity/locales/entities/workspace_member/ja.yml
@@ -1,10 +1,10 @@
 entities:
   workspace_member:
     workspace_member_id:
-      name: ワークスペースメンバーID
+      name: "ワークスペースメンバーID"
     workspace_id:
-      name: ワークスペースID
+      name: "ワークスペースID"
     user_account_id:
-      name: アカウントID
+      name: "アカウントID"
     workspace_member_authority_id:
-      name: ワークスペースメンバー権限ID
+      name: "ワークスペースメンバー権限ID"
