--- a/dev/system/database/entity/locales/entities/workspace_member_authority/ja.yml
+++ b/dev/system/database/entity/locales/entities/workspace_member_authority/ja.yml
@@ -1,12 +1,12 @@
 entities:
   workspace_member_authority:
     map:
-      admin: 管理者
-      general: 一般
-      read_only: 読み取り専用
+      admin: "管理者"
+      general: "一般"
+      read_only: "読み取り専用"
     workspace_member_authority_id:
-      name: ワークスペースメンバー権限ID
+      name: "ワークスペースメンバー権限ID"
     symbol:
-      name: シンボル名
+      name: "シンボル名"
     value:
-      name: 値
+      name: "値"
