--- a/dev/system/layer/auth/locales/pages/signup/ja.yml
+++ b/dev/system/layer/auth/locales/pages/signup/ja.yml
@@ -1,26 +1,26 @@
 pages:
   signup:
-    heading: アカウント作成
+    heading: "アカウント作成"
     form:
       user_account_name:
-        label: アカウント名
-        placeholder: meower
+        label: "アカウント名"
+        placeholder: "meower"
       email:
-        label: メールアドレス
-        placeholder: meower@example.com
+        label: "メールアドレス"
+        placeholder: "meower@example.com"
       email_confirm:
-        label: メールアドレス（確認用）
-        placeholder: meower@example.com
+        label: "メールアドレス（確認用）"
+        placeholder: "meower@example.com"
         error:
-          not_match: メールアドレスが一致しません
+          not_match: "メールアドレスが一致しません"
       password:
-        label: パスワード
+        label: "パスワード"
       password_confirm:
-        label: パスワード（確認用）
+        label: "パスワード（確認用）"
         error:
-          not_match: パスワードが一致しません
+          not_match: "パスワードが一致しません"
       button:
-        submit: 送信
+        submit: "送信"
     button:
-      login: ログイン
-      resend_verify_code: 認証コード再送信
+      login: "ログイン"
+      resend_verify_code: "認証コード再送信"
