feat: Implement sign-up email sending

--- a/dev/system/layer/auth/locales/pages/login/ja.yml
+++ b/dev/system/layer/auth/locales/pages/login/ja.yml
@@ -5,6 +5,7 @@ pages:
       email:
         label: "メールアドレス"
         placeholder: "meower@example.com"
+        error:
           not_verified: "そのユーザは認証されていません"
       password:
         label: "パスワード"
