--- a/dev/system/layer/auth/locales/pages/verify_code/ja.yml
+++ b/dev/system/layer/auth/locales/pages/verify_code/ja.yml
@@ -2,6 +2,7 @@ pages:
   verify_code:
     heading: "コード認証"
     form:
+      caution: "この画面を離れると、認証コードの再送が必要になります"
       code:
         label: "コード"
       button:
