feat: Implement password reset flow

--- a/dev/system/layer/auth/locales/pages/forgot_password/ja.yml
+++ b/dev/system/layer/auth/locales/pages/forgot_password/ja.yml
@@ -8,6 +8,6 @@ pages:
         error:
           not_verified: "そのユーザは認証されていません"
       button:
-        send: "送信"
+        submit: "送信"
     button:
       login: "ログイン"
