--- a/dev/system/layer/auth/locales/pages/resend_verify_code/ja.yml
+++ b/dev/system/layer/auth/locales/pages/resend_verify_code/ja.yml
@@ -12,7 +12,7 @@ pages:
         error:
           required: "パスワードが入力されていません"
       button:
-        send: "送信"
+        submit: "送信"
     button:
       login: "ログイン"
       signup: "サインアップ"
