--- a/dev/system/util/validator/locales/ja.yml
+++ b/dev/system/util/validator/locales/ja.yml
@@ -1,8 +1,8 @@
 validator:
   error:
     required: "%{column}は必須です"
-    too_short: "%{column}は%{min}以上で入力してください"
-    too_long: "%{column}は%{max}以下で入力してください"
+    too_short: "%{column}は%{min}文字以上で入力してください"
+    too_long: "%{column}は%{max}文字以下で入力してください"
     invalid_ascii: "%{column}はアスキーで入力してください"
     invalid_alphanumeric: "%{column}は半角英数字で入力してください"
     invalid_email: "%{column}はメールアドレス形式で入力してください"
