[Auth] feat: Set title on authentication page

--- a/dev/system/layer/auth/locales/pages/reset_password_success/ja.yml
+++ b/dev/system/layer/auth/locales/pages/reset_password_success/ja.yml
@@ -1,5 +1,6 @@
 pages:
   reset_password_success:
+    title: "パスワードリセット完了"
     heading: "パスワードリセット完了"
     next: "ログイン画面から再度ログインしてください"
     button:
