feat: Add account API migrations and entities

--- a/dev/system/app/spa/locales/pages/profile/index/ja.yml
+++ b/dev/system/app/spa/locales/pages/profile/index/ja.yml
@@ -1,6 +1,6 @@
 pages:
-  mypage:
+  profile:
     index:
-      heading: "マイページ"
+      heading: "プロフィール"
       profile_container:
         display_name: "表示名"
