--- a/dev/system/app/spa/locales/pages/account/index/ja.yml
+++ b/dev/system/app/spa/locales/pages/account/index/ja.yml
@@ -4,3 +4,5 @@ pages:
       heading: "アカウント"
       account_list:
         no_accounts: "アカウントが登録されていません"
+      button:
+        create_account: "アカウント新規作成"
