--- a/dev/system/app/spa/locales/pages/account/create/ja.yml
+++ b/dev/system/app/spa/locales/pages/account/create/ja.yml
@@ -1,4 +1,20 @@
 pages:
   account:
     create:
-      heading: "アカウント新規作成"
+      heading: "アカウント追加"
+      form:
+        account_name:
+          label: "アカウント名"
+          placeholder: "半角英数字、アンダーバー(_)が使用可能"
+        name:
+          label: "表示名"
+          placeholder: "表示名"
+        affiliation:
+          label: "所属"
+          placeholder: "会社名、学校名、組織名..."
+        email:
+          label: "メールアドレス"
+          placeholder: "meower@example.com"
+        bio:
+          label: "自己紹介"
+          placeholder: "自己紹介"
