feat: Feat heading component

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -1,8 +1,10 @@
 pages:
   dev:
     ui_catalog:
-      heading: "UIカタログ"
+      heading_top: "UIカタログ"
       badge:
         heading: "Badge"
       chip:
         heading: "Chip"
+      heading:
+        heading: "Heading"
