refactor: Fix how to pass children

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -10,3 +10,7 @@ pages:
         heading: "Heading"
       icon:
         heading: "Icon"
+      list:
+        heading: "List"
+      table:
+        heading: "Table"
