feat: Feat alert component

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -14,3 +14,7 @@ pages:
         heading: "List"
       table:
         heading: "Table"
+      tooltip:
+        heading: "Tooltip"
+      alert:
+        heading: "Alert"
