feat: Feat progress component

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -119,3 +119,18 @@ pages:
           heading: "Scroll"
         colors:
           heading: "Colors"
+
+      progress:
+        heading: "Progress"
+        spin:
+          heading: "Spin"
+          sizes:
+            heading: "Spin Sizes"
+          thickness:
+            heading: "Spin Thicness"
+          colors:
+            heading: "Spin Colors"
+        linear:
+          heading: "Linear"
+          colors:
+            heading: "Linear Colors"
