feat: Feat skeleton component

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -134,3 +134,12 @@ pages:
           heading: "Linear"
           colors:
             heading: "Linear Colors"
+
+      skeleton:
+        heading: "Skeleton"
+        basic:
+          heading: "Basic"
+        pulse:
+          heading: "Pulse"
+        wave:
+          heading: "Wave"
