feat: Feat snackbar component

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -143,3 +143,8 @@ pages:
           heading: "Pulse"
         wave:
           heading: "Wave"
+
+      snackbar:
+        heading: "Snackbar"
+        basic:
+          heading: "Basic"
