feat: Update snackbar examples

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -148,3 +148,9 @@ pages:
         heading: "Snackbar"
         basic:
           heading: "Basic"
+        animations:
+          heading: "Animations"
+        colors:
+          heading: "Colors"
+        position:
+          heading: "Position"
