feat: Feat button component

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -154,3 +154,16 @@ pages:
           heading: "Colors"
         position:
           heading: "Position"
+
+      button:
+        heading: "Button"
+        basic:
+          heading: "Basic"
+        disabled:
+          heading: "Disabled"
+        sizes:
+          heading: "Sizes"
+        colors:
+          heading: "Colors"
+        rounds:
+          heading: "Rounds"
