feat: Feat button group component

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -167,3 +167,18 @@ pages:
           heading: "Colors"
         rounds:
           heading: "Rounds"
+
+      button_group:
+        heading: "ButtonGroup"
+        basic:
+          heading: "Basic"
+        disabled:
+          heading: "Disabled"
+        sizes:
+          heading: "Sizes"
+        colors:
+          heading: "Colors"
+        vertical:
+          heading: "Vertical"
+        active:
+          heading: "Active"
