feat: Feat checkbox component

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -182,3 +182,12 @@ pages:
           heading: "Vertical"
         active:
           heading: "Active"
+
+      checkbox:
+        heading: "Checkbox"
+        basic:
+          heading: "Basic"
+        sizes:
+          heading: "Sizes"
+        colors:
+          heading: "Colors"
