feat: Feat select component

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -218,3 +218,10 @@ pages:
           heading: "Basic"
         sizes:
           heading: "Sizes"
+
+      select:
+        heading: "Select"
+        basic:
+          heading: "Basic"
+        disabled:
+          heading: "Disabled"
