refactor: Refactor input components

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -225,3 +225,7 @@ pages:
           heading: "Basic"
         disabled:
           heading: "Disabled"
+        sizes:
+          heading: "Sizes"
+        optgroup:
+          heading: "Option Group"
