feat: Feat switch component

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -229,3 +229,12 @@ pages:
           heading: "Sizes"
         optgroup:
           heading: "Option Group"
+
+      switch:
+        heading: "Switch"
+        basic:
+          heading: "Basic"
+        sizes:
+          heading: "Sizes"
+        colors:
+          heading: "Colors"
