feat: Feat navigation components

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -253,3 +253,15 @@ pages:
           heading: "Full Width"
         multiline:
           heading: "Multiline"
+
+      crumbs:
+        heading: "Crumbs"
+        basic:
+          heading: "Basic"
+
+      drawer:
+        heading: "Drawer"
+        basic:
+          heading: "Basic"
+        position:
+          heading: "Position"
