feat: Feat pagination component

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -265,3 +265,8 @@ pages:
           heading: "Basic"
         position:
           heading: "Position"
+
+      pagination:
+        heading: "Pagination"
+        basic:
+          heading: "Basic"
