feat: Feat tab component

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -272,3 +272,10 @@ pages:
           heading: "Basic"
         colors:
           heading: "Colors"
+
+      tab:
+        heading: "Tab"
+        basic:
+          heading: "Basic"
+        colors:
+          heading: "Colors"
