feat: Feat tab component reactivity

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -279,3 +279,5 @@ pages:
           heading: "Basic"
         colors:
           heading: "Colors"
+        vertical:
+          heading: "Vertical"
