refactor: Standardize error handling

--- a/dev/system/app/spa/locales/common/ja.yml
+++ b/dev/system/app/spa/locales/common/ja.yml
@@ -2,3 +2,7 @@ common:
   api:
     graphql:
       error: "通信エラーが発生しました。時間を空けて再度お試しください。"
+    network:
+      error: "通信エラーが発生しました。時間を空けて再度お試しください。"
+    unauthorized:
+      error: "エラーが発生しました。画面をリロードして、再度ログインしてください。"
