--- a/dev/system/auth/core/locales/pages/signup_success/ja.yml
+++ b/dev/system/auth/core/locales/pages/signup_success/ja.yml
@@ -2,6 +2,6 @@ pages:
   signup_success:
     title: "サインアップ完了"
     heading: "サインアップ完了"
-    next: "ログインしてMeowerを使い始めよう！"
+    next: "さぁ、今すぐ始めよう！"
     button:
       login: "ログイン"
