--- a/dev/system/app/spa/locales/pages/account/create/ja.yml
+++ b/dev/system/app/spa/locales/pages/account/create/ja.yml
@@ -18,3 +18,15 @@ pages:
         bio:
           label: "自己紹介"
           placeholder: "自己紹介"
+        birthdate:
+          label: "生年月日"
+        gender:
+          label: "性別"
+          male:
+            label: "男性"
+          female:
+            label: "女性"
+          other:
+            label: "その他"
+        button:
+          send: "作成"
