feat: Fix a bug when creating an accoung

--- a/dev/system/app/spa/locales/pages/account/detail/ja.yml
+++ b/dev/system/app/spa/locales/pages/account/detail/ja.yml
@@ -15,3 +15,6 @@ pages:
           head: "生年月日"
         gender:
           head: "性別"
+          male: "男性"
+          female: "女性"
+          other: "その他"
