feat: Add file storage handle to accounts API

--- a/dev/system/apis/account/core/locales/common/ja.yml
+++ b/dev/system/apis/account/core/locales/common/ja.yml
@@ -2,4 +2,4 @@ system:
   error:
     fatal: "システムエラーが発生しました"
     unauthorized: "権限がありません"
-    not_found: "データが見つかりません"
+    not_found: "データが見つかりませんでした"
