feat: Add account profile avatar table

--- a/dev/system/apis/account/entity/locales/entities/account_profile/ja.yml
+++ b/dev/system/apis/account/entity/locales/entities/account_profile/ja.yml
@@ -4,6 +4,8 @@ entities:
       name: "アカウントプロフィールID"
     account_id:
       name: "アカウントID"
+    token:
+      name: "トークン"
     name:
       name: "名前"
     affiliation:
