--- a/dev/system/apis/account/entity/locales/entities/workspace/ja.yml
+++ b/dev/system/apis/account/entity/locales/entities/workspace/ja.yml
@@ -10,3 +10,5 @@ entities:
       name: "作成日時"
     updated_at:
       name: "更新日時"
+    error:
+      default_workspace: "このワークスペースはアカウントのデフォルトになっています"
