--- a/dev/system/apis/account/entity/locales/entities/account_profile_avatar/ja.yml
+++ b/dev/system/apis/account/entity/locales/entities/account_profile_avatar/ja.yml
@@ -6,6 +6,8 @@ entities:
       name: "アカウントプロフィールID"
     file_key:
       name: "ファイルキー"
+    file_size:
+      name: "ファイルサイズ"
     content_type:
       name: "ファイル種別"
     created_at:
