feat: Feat Popover component

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -120,6 +120,11 @@ pages:
         colors:
           heading: "Colors"
 
+      popover:
+        heading: "Popover"
+        basic:
+          heading: "Basic"
+
       progress:
         heading: "Progress"
         spin:
