feat: Feat popover positioning

--- a/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
+++ b/dev/system/app/spa/locales/pages/dev/ui_catalog/ja.yml
@@ -124,6 +124,10 @@ pages:
         heading: "Popover"
         basic:
           heading: "Basic"
+        animations:
+          heading: "Animations"
+        position:
+          heading: "Position"
 
       progress:
         heading: "Progress"
