fix: Fix create account profile page bugs

--- a/dev/system/app/spa/locales/pages/account/create_profile/ja.yml
+++ b/dev/system/app/spa/locales/pages/account/create_profile/ja.yml
@@ -27,3 +27,5 @@ pages:
             label: "その他"
         button:
           send: "作成"
+        error:
+          account_not_selected: "アカウントが選択されていません"
