feat: Fix account profile layout

--- a/dev/system/app/spa/locales/pages/account/profile/ja.yml
+++ b/dev/system/app/spa/locales/pages/account/profile/ja.yml
@@ -2,6 +2,8 @@ pages:
   account:
     profile:
       heading: "アカウント詳細"
+      button:
+        create_profile: "プロフィール追加"
       table:
         name:
           head: "表示名"
