feat: Add location and telno field to profile

--- a/dev/system/apis/account/entity/locales/entities/account_profile/ja.yml
+++ b/dev/system/apis/account/entity/locales/entities/account_profile/ja.yml
@@ -8,10 +8,14 @@ entities:
       name: "名前"
     affiliation:
       name: "所属"
+    location:
+      name: "場所"
     bio:
       name: "自己紹介"
     email:
       name: "メールアドレス"
+    telno:
+      name: "電話番号"
     birthdate:
       name: "誕生日"
       error:
